# cars-evolution

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cars-evolution-ci.yml
app/: AppBuilder.cc  AppBuilder.h  AppInterface.cc  AppInterface.h  CMakeLists.txt  CarsPopulationModel.cc  CarsPopulationModel.h  EvolutionSettingsModel.cc  EvolutionSettingsModel.h  FileIO.cc  FileIO.h  JsonParser.cc  JsonParser.h  main.cc  qml.qrc
app/CarsEvolutionCore/: ParametersMatrix.h
app/CarsEvolutionCore/Evolution/: Evolution.h
app/gui/: AlgorithmPage.qml  Car.qml  CarDetailsPopup.qml  Chart.qml  Footer.qml  HeaderToolbar.qml  MainMenu.qml  ParametersListView.qml  Route.qml  SettingsPage.qml  SimulationPage.qml  SimulationWindow.qml  ToolbarButton.qml  main.qml
docs/: algorithm_overview.html
docs/doxygen/html/: annotated.html  classes.html  dir_000000_000001.html  dir_000001_000002.html  dir_000001_000003.html  dir_000004_000001.html  dir_0df09a091a4eb5e56719829019e3d2f9.html  dir_0df09a091a4eb5e56719829019e3d2f9_dep.map  dir_0df09a091a4eb5e56719829019e3d2f9_dep.md5  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_96d0411f8bea6f4cc930d6f779665276.html  dir_96d0411f8bea6f4cc930d6f779665276_dep.map  dir_96d0411f8bea6f4cc930d6f779665276_dep.md5  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.map  dir_d422163b96683743ed3963d4aac17747_dep.md5  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  (+27 more)
docs/doxygen/html/d0/d23/: class_app_interface-members.html
docs/doxygen/html/d0/da1/: _app_builder_8h.html  _app_builder_8h_source.html
docs/doxygen/html/d0/db5/: classcer_1_1_simulation_data-members.html
docs/doxygen/html/d0/df8/: _car_8h__dep__incl.map  _car_8h__dep__incl.md5
docs/doxygen/html/d1/d1f/: _evolution_tests_8cc__incl.map  _evolution_tests_8cc__incl.md5
docs/doxygen/html/d1/d44/: namespacecer.html
docs/doxygen/html/d1/d7f/: _app_interface_8h__dep__incl.map  _app_interface_8h__dep__incl.md5
docs/doxygen/html/d1/dd5/: classcer_1_1evolution_1_1_evolution.html
docs/doxygen/html/d1/dfe/: structcer_1_1evolution_1_1_parameter-members.html
docs/doxygen/html/d2/d04/: class_app_builder__coll__graph.md5
docs/doxygen/html/d2/d2c/: class_cars_population_model__inherit__graph.md5
docs/doxygen/html/d2/d5e/: classcer_1_1_cars_evolution_root-members.html
docs/doxygen/html/d2/d66/: class_cars_population_model__coll__graph.map
docs/doxygen/html/d2/d7b/: _app_interface_8h.html  _app_interface_8h_source.html
docs/doxygen/html/d2/d7e/: _cars_population_model_8h__incl.map  _cars_population_model_8h__incl.md5
docs/doxygen/html/d2/d87/: _cars_evolution_root_8h__incl.map  _cars_evolution_root_8h__incl.md5
docs/doxygen/html/d2/d95/: _car_8h__incl.map  _car_8h__incl.md5
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+40 more)
docs/test_coverage/: index-sort-f.html  index-sort-l.html  index.html
docs/test_coverage/src/: CarsEvolutionRoot.cc.func-sort-c.html  CarsEvolutionRoot.cc.func.html  CarsEvolutionRoot.cc.gcov.html  CarsPopulationData.cc.func-sort-c.html  CarsPopulationData.cc.func.html  CarsPopulationData.cc.gcov.html  ParametersMatrix.cc.func-sort-c.html  ParametersMatrix.cc.func.html  ParametersMatrix.cc.gcov.html  SimulationData.cc.func-sort-c.html  SimulationData.cc.func.html  SimulationData.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/test_coverage/src/Evolution/: Evolution.cc.func-sort-c.html  Evolution.cc.func.html  Evolution.cc.gcov.html  MathUtils.cc.func-sort-c.html  MathUtils.cc.func.html  MathUtils.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/test_coverage/src/Physics/: Car.cpp.func-sort-c.html  Car.cpp.func.html  Car.cpp.gcov.html  World.cc.func-sort-c.html  World.cc.func.html  World.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html
scripts/: build.sh  install.sh  run_test_coverage.sh
src/: AppBuilder.cc  AppBuilder.h  AppInterface.cc  AppInterface.h  CMakeLists.txt  CarsEvolutionRoot.cc  CarsEvolutionRoot.h  CarsPopulationData.cc  CarsPopulationData.h  CarsPopulationModel.cc  CarsPopulationModel.h  FileIO.cc  JsonParser.cc  JsonParser.h  ParametersMatrix.cc  ParametersMatrix.h  SimulationData.cc  SimulationData.h  Worker.cc  Worker.h  main.cc  qml.qrc
src/CarsEvolutionCore/: CMakeLists.txt  CarStructure.h  CarsEvolutionRoot.cc  CarsEvolutionRoot.h  CarsPopulationData.cc  CarsPopulationData.h  SimulationData.h  World.h
src/CarsEvolutionCore/Evolution/: Evolution.cc  Evolution.h  MathUtils.cc  MathUtils.h
src/CarsEvolutionCore/Physics/: World.cc  World.h
src/Evolution/: Evolution.cc  Evolution.h  MathUtils.cc  MathUtils.h
src/Physics/: Car.cpp  Car.h  World.cc  World.h
src/core/: CMakeLists.txt  CarsEvolutionRoot.cc  CarsEvolutionRoot.h  World.cc  World.h
src/gui/: AlgorithmPage.qml  Car.qml  Footer.qml  HeaderToolbar.qml  MainMenu.qml  SettingsPage.qml  SimulationPage.qml  SimulationWindow.qml  ToolbarButton.qml  main.qml
tests/: CMakeLists.txt  CarsEvolutionCoreTests.cc  EvolutionTests.cc  IntegrationTests.cc  Main.cc  PhysicsTests.cc  main.cc
(+204 files in other folders)
